Added utility methods in AocBase for loading int / long arrays. 2020 solutions days 1-10. Reverting some calls to Stream.toList() when a mutable list is required.