@@ -7,6 +7,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 import org.tinylog.Logger;
 
@@ -40,7 +41,8 @@ public class Day5 extends AocBase {
 	}
 
 	private static List<Line2D> loadData(Path input) throws IOException {
-		return Files.lines(input).map(Line2D::create).toList();
+		// Can't use Stream.toList() as that returns an immutable list
+		return Files.lines(input).map(Line2D::create).collect(Collectors.toList());
 	}
 
 	@Override
